--- a/config/data.yaml
+++ b/config/data.yaml
@@ -1,13 +1,15 @@
 train_data_path:
   1:
-    type: 'a'
-    scp_path: /home/ruchao/workdir/spapl-kaldi/egs/OGI/sspapl/data/test/feats.scp 
-    phrase_label: /home/ruchao/workdir/spapl-kaldi/egs/OGI/sspapl/data/test/utt2age
-    speaker_label: /home/ruchao/workdir/spapl-kaldi/egs/OGI/sspapl/data/test/utt2age 
-  2:
-    type: 'b'
-    scp_path: /home/ruchao/workdir/spapl-kaldi/egs/OGI/sspapl/data/dev/feats.scp 
-    phrase_label: /home/ruchao/workdir/spapl-kaldi/egs/OGI/sspapl/data/dev/utt2age 
-    speaker_label: /home/ruchao/workdir/spapl-kaldi/egs/OGI/sspapl/data/dev/utt2age 
+    name: 'a'
+    scp_path: data/train_clean_100/feats.scp 
+    phrase_label: data/train_clean_100/utt2num_frames
+    speaker_label: data/train_clean_100/utt2num_frames
+
+dev_data_path:
+  1:
+    name: 'b'
+    scp_path: data/dev_clean/feats.scp 
+    phrase_label: data/dev_clean/utt2num_frames
+    speaker_label: data/dev_clean/utt2num_frames
 
 
