--- a/config/data_asr.yaml
+++ b/config/data_asr.yaml
@@ -1,12 +1,14 @@
 train_data_path:
   1:
     name: 'librispeech'
-    scp_path: data/train_clean_100/feats.scp 
-    phrase_label: data/train_clean_100/utt2num_frames
+    scp_path: data/train_clean_100/feats.scp
+    text_label: data/train_clean_100/text_phone_id
+    phrase_label: data/train_clean_100/utt2pid
     speaker_label: data/train_clean_100/utt2num_frames
   2:
     name: 'deepmine'
     scp_path: data/train_deepmine/feats.scp
+    text_label: data/train_deepmine/text_phone_id
     phrase_label: data/train_deepmine/utt2pid
     speaker_label: data/train_deepmine/utt2num_frames
 
@@ -14,11 +16,13 @@ dev_data_path:
   1:
     name: 'librispeech'
     scp_path: data/dev_clean/feats.scp 
-    phrase_label: data/dev_clean/utt2num_frames
+    text_label: data/dev_clean/text_phone_id
+    phrase_label: data/dev_clean/utt2pid
     speaker_label: data/dev_clean/utt2num_frames
   2:
     name: 'deepmine'
     scp_path: data/dev_deepmine/feats.scp
+    text_label: data/dev_deepmine/text_phone_id
     phrase_label: data/dev_deepmine/utt2pid
     speaker_label: data/dev_deepmine/utt2num_frames
 
